# rk-bar

./: .gitignore  Cargo.toml  rk-bar.css
src/: bar.rs  main.rs  output.rs
src/modules/: clock.rs  mod.rs
src/modules/sway/: mod.rs  title.rs  workspaces.rs
